--- a/src/app/i18n/locales/en.json
+++ b/src/app/i18n/locales/en.json
@@ -42,110 +42,70 @@
   },
   "terms_conditions": {
     "titles": {
-      "terms_and_conditions": "Terms and Conditions",
-      "cookie_policy": "Cookie Policy",
-      "security_policy": "Security Policy",
-      "user_rights": "User Rights",
-      "prohibited_activities": "Prohibited Activities",
-      "other_information": "Other Important Information"
+      "privacy_policy": "Privacy Policy",
+      "terms_of_service": "Terms of Service"
     },
-    "terms_and_conditions": {
-      "acceptance_of_terms": {
-        "title": "Acceptance of Terms",
-        "content": "By using this application, you agree to comply with and be bound by these Terms and Conditions. If you do not agree with these terms, you must discontinue use of the App immediately."
+    "privacy_policy": {
+      "title": "Privacy Policy",
+      "intro": "At BidZuu, your privacy is a top priority. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you visit our website or use our services.",
+      "information_collection": {
+        "title": "Information Collection:",
+        "content": "We collect information such as your name, email, shipping address, payment details, and identification for account verification. We may also collect data on browsing behavior, device information, and cookies to enhance user experience."
       },
-      "user_responsibilities": {
-        "title": "User Responsibilities",
-        "sections": {
-          "responsible_use": "Users are solely responsible for their use of the App and must use it in a lawful, ethical, and responsible manner.",
-          "prohibited_content": "Users must not post or share any content that is offensive, adult, discriminatory, racist, illegal, or harmful. The admin reserves the right to remove such content and terminate associated accounts.",
-          "account_security": "Users are responsible for maintaining the confidentiality of their account credentials and for any activity that occurs under their account."
-        }
+      "how_we_use": {
+        "title": "How We Use Information:",
+        "content": "To manage accounts and transactions, to communicate with users about listings, bids, and sales, to improve site performance, security, and personalization"
       },
-      "sharing_of_information": {
-        "title": "Sharing of Information",
-        "content": "By using the App, you agree that your information may be shared with third-party services to enhance the functionality and experience of the App. The admin ensures that data sharing complies with applicable legal standards."
+      "sharing_disclosure": {
+        "title": "Sharing and Disclosure:",
+        "content": "We do not sell or rent personal information. Your information may be shared with third-party service providers (e.g. payment processors, shipping partners) only for order fulfillment and operational purposes. Legal obligations may require us to share data in response to lawful requests."
       },
-      "liability": {
-        "title": "Liability",
-        "sections": {
-          "not_responsible": "The admin is not responsible for any harm, damage, or loss resulting from improper use of the App, technical issues, downtime, or user interactions.",
-          "indemnification": "Users agree to indemnify and hold harmless the admin from any claims arising out of their use of the App."
-        }
+      "data_security": {
+        "title": "Data Security:",
+        "content": "All user data is encrypted and stored securely. Access is restricted to authorized personnel only."
       },
-      "account_removal": {
-        "title": "Account Removal",
-        "sections": {
-          "user_right": "Users have the right to delete their accounts at any time. Upon deletion, personal data will be handled as described in the App’s Privacy Policy.",
-          "admin_right": "The admin reserves the right to suspend or permanently remove accounts that violate the rules or engage in malicious activities."
-        }
+      "user_rights": {
+        "title": "User Rights:",
+        "content": "You may update, correct, or delete your personal data at any time. Users can request a copy of stored data or opt out of marketing communications."
+      },
+      "consent": "By using BidZuu, you consent to our privacy practices. For any privacy-related inquiries, contact us at privacy@bidzuu.com."
+    },
+    "terms_of_service": {
+      "title": "Terms of Service",
+      "intro": "Welcome to BidZuu. By accessing or using our platform, you agree to the following terms and conditions:",
+      "user_eligibility": {
+        "title": "User Eligibility:",
+        "content": "You must be 18+ years old and provide accurate registration details. You agree not to create multiple accounts or impersonate others."
+      },
+      "platform_use": {
+        "title": "Platform Use:",
+        "content": "BidZuu is a marketplace platform. We do not own or sell listed items. Sellers are solely responsible for the accuracy of listings and fulfillment. Buyers are responsible for payment and adherence to bid or purchase commitments."
+      },
+      "seller_fees": {
+        "title": "Seller Fees and Payments:",
+        "content": "BidZuu charges a 3% transaction fee on completed sales. Fees are automatically deducted at the time of payout."
+      },
+      "prohibited_listings": {
+        "title": "Prohibited Listings:",
+        "content": "Items that are illegal, counterfeit, or violate intellectual property rights are not allowed. We reserve the right to remove any listings without notice."
+      },
+      "disputes": {
+        "title": "Disputes and Resolution:",
+        "content": "Users are encouraged to resolve disputes directly. If escalated, BidZuu may mediate at its discretion but does not assume liability."
+      },
+      "account_suspension": {
+        "title": "Account Suspension:",
+        "content": "We may suspend or terminate accounts for violating terms, fraud, abuse, or policy violations."
+      },
+      "limitation_liability": {
+        "title": "Limitation of Liability:",
+        "content": "BidZuu is not liable for losses, damages, or issues arising from user transactions or third-party services."
       },
       "modifications": {
-        "title": "Modifications",
-        "content": "The admin reserves the right to modify these Terms and Conditions at any time. Continued use of the App constitutes acceptance of the modified terms."
-      }
-    },
-    "cookie_policy": {
-      "title": "Cookie Policy",
-      "use_of_cookies": {
-        "title": "Use of Cookies",
-        "content": "The App uses cookies to enhance the user experience, analyze app performance, and provide personalized content. By using the App, you agree to the use of cookies."
+        "title": "Modifications:",
+        "content": "Terms may be updated periodically. Continued use constitutes acceptance of the latest terms."
       },
-      "types_of_cookies": {
-        "title": "Types of Cookies",
-        "sections": {
-          "essential_cookies": "Necessary for the operation of the App.",
-          "performance_cookies": "Collect data on how users interact with the App.",
-          "functionality_cookies": "Save user preferences to enhance usability.",
-          "third_party_cookies": "May be used to deliver personalized advertising or analytics."
-        }
-      },
-      "user_consent": {
-        "title": "User Consent",
-        "content": "By using the App, you consent to the storage and use of cookies as described in this policy. You may disable cookies through your device settings, but doing so may limit the functionality of the App."
-      }
-    },
-    "security_policy": {
-      "title": "Security Policy",
-      "data_protection": {
-        "title": "Data Protection",
-        "content": "The App employs industry-standard security measures to protect user data. However, the admin cannot guarantee complete security due to the inherent risks of online services."
-      },
-      "user_responsibility": {
-        "title": "User Responsibility",
-        "content": "Users are responsible for safeguarding their login credentials and reporting any unauthorized access or suspicious activity to the admin immediately."
-      },
-      "data_sharing": {
-        "title": "Data Sharing",
-        "content": "While the App prioritizes user data security, some data may be shared with trusted third-party providers to enhance functionality or comply with legal requirements."
-      }
-    },
-    "prohibited_activities": {
-      "title": "Prohibited Activities",
-      "sections": {
-        "prohibited_content": "Users are not allowed to post or share content that is explicit, adult, discriminatory, racist, illegal, or incites violence or hatred.",
-        "misuse_of_app": "Users must not use the App for any activity that could harm its reputation, interfere with its operation, or exploit other users.",
-        "consequences": "The admin reserves the right to remove any content or account that violates these rules without prior notice."
-      }
-    },
-    "user_rights": {
-      "title": "User Rights",
-      "account_deletion": {
-        "title": "Account Deletion",
-        "content": "Users may request account deletion at any time through the App’s settings or by contacting support. Upon deletion, personal data will be removed as per the Privacy Policy, but some data may be retained for legal or regulatory purposes."
-      },
-      "complaints": {
-        "title": "Complaints and Disputes",
-        "content": "Users have the right to raise complaints or disputes regarding the App. Such complaints must be submitted via the official support channels."
-      }
-    },
-    "other_information": {
-      "title": "Other Important Information",
-      "sections": {
-        "no_guarantee": "The App is provided 'as-is.' The admin does not guarantee uninterrupted access, accuracy, or fitness for any specific purpose.",
-        "legal_compliance": "Users are responsible for ensuring their actions comply with local laws and regulations.",
-        "admin_rights": "The admin reserves the right to update policies, remove content, and modify App features at any time."
-      }
+      "contact": "For questions, contact us at support@bidzuu.com."
     }
   },
   "pageSEO": {
@@ -161,8 +121,8 @@
     "phone_login_description": "Phone login page",
     "phone_otp_title": "Phone OTP",
     "phone_otp_description": "Phone OTP page",
-    "home_title": "Biddo, Home Page",
-    "home_description": "Biddo, Home page of the application",
+    "home_title": "BidZuu, Home Page",
+    "home_description": "BidZuu, Home page of the application",
     "create_auction_title": "Create auction",
     "create_auction_description": "Create a new auction",
     "not_found_title": "Page not found",
@@ -217,7 +177,7 @@
     "faq": "FAQ",
     "mobile_app": "Mobile app",
     "enjoy_better_experience": "Enjoy a better experience with our mobile app",
-    "about_motto": "Biddo is a platform where you can sell items you no longer need and buy items you want."
+    "about_motto": "BidZuu is a platform where you can sell items you no longer need and buy items you want."
   },
   "cookie": {
     "message": "This website uses cookies to improve user experience. By using our website you consent to all cookies in accordance with our Cookie Policy.",
